# takker

./: .env  .env.dev  .env.prod  .eslintignore  .flake8  .gitattributes  .gitignore  .pep8speaks.yml  README.md  aerich.ini  bot.py  pyproject.toml  skd.verify  takker-reborn.code-workspace  test.py  text.txt
api/: __init__.py  _api.py  call_api.py  group_manage.py  info.py  message.py  models.py  self_manage.py
configs/: config.example.py  config.py  path_config.py
data/: data.db  data.db-shm  data.db-wal
db/: db_connect.py
db/models/: bs.py  config.py  illust.py
db/utils/: data_convert.py  illust_config.py  perm.py  plugin_manager.py  plugin_perm.py  point.py  starluck.py
plugins/: __groupinv_initiative.py  __kisskiss.py  __petpet.py  ask.py  atri.py  bili_resolve.py  book_of_answers.py  cat.py  db_backup.py  dinggong.py  friend_say.py  gnl_control.py  groupinv_initiative.py  groupinv_passive.py  guildinfo.py  help.py  hitokoto.py  hook.py  invite_check.py  jp_score.py  kisskiss.py  luxun.py  petpet.py  repeater.py  starluck.py  status.py  withdraw.py
plugins/__TODO_setu_submit/: __init__.py
plugins/__autoinv/: __init__.py  groupinv_initiative.py
plugins/__autoinv_已弃用插件/: groupinv_initiative.py
plugins/__bili_sub/: bilireq.py  dynamic.py  dynamic_pusher.py  handle.py  live_pusher.py  parser.py
plugins/ask/: __init__.py  handle.py
plugins/auto_withdraw/: __init__.py
plugins/bili_sub/: Untitled-1.json  __init__.py  dynamic.py  dynamic_pusher.py  handle.py  live_pusher.py  parser.py
plugins/daily_check/: __init__.py  data_source.py  handler.py
plugins/group_management/: ban.py  kick.py
plugins/groupinv/: __init__.py  groupinv_initiative.py  groupinv_passive.py
plugins/hhsh/: __init__.py  data_source.py
plugins/hooks/: __init__.py  ban_check.py  enable_check.py  exploit_check.py  permission_check.py  plugin_call_hook.py  process_time_hook.py
plugins/illust/: __init__.py  data_source.py  handle.py  parser.py
plugins/illust_submit/: __init__.py  data_source.py
plugins/noticement/: __init__.py  handle.py  parser.py
plugins/perm_control/: __init__.py  handle.py  parser.py
plugins/plugin_manager/: __init__.py  handle.py  manager.py  parser.py
plugins/setu_submit/: __init__.py  data_source.py
plugins/songpicker/: __init__.py  data_source.py
plugins/starluck/: __init__.py
plugins/stats_log/: __init__.py  draw.py  stat_hook.py
plugins/summary_wordcloud/: __init__.py  draw.py
plugins/test/: __init__.py
plugins/weather/: __init__.py  convert_pic.py  get_weather.py
plugins/wynn/: __init__.py  data.json  data_source.py  data_storage.py  handle.py  model.py  parser.py  stat_example.json  template.py
plugins/wynn_item/: __init__.py
resources/text/: book_of_answers.json  (+2 more)
service/: http_api.py  init.py  log.py
utils/: browser.py  data.py  img_util.py  init.py  log.py  msg_util.py  patcher.py  preinit.py  rule.py  shutdown.py  text_util.py  user_agent.py  utils.py
(+54 files in other folders)
