[tool.poetry]
name = "takker_reborn"
version = "0.0.1"
description = "高い性能萝卜子Takker"
authors = ["风屿 <i@windis.cn>"]
license = "AGPL-v3"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
nonebot2 = "^2.0.0-alpha.15"
nonebot-adapter-cqhttp = "^2.0.0-alpha.15"
nonebot-plugin-apscheduler = "^0.1.2"
tortoise-orm = {extras = ["accel"], version = "^0.17.6"}
playwright = "^1.14.0"
Pillow = "^8.3.1"
ujson = "^4.0.2"
types-ujson = "^0.1.1"
zhconv = "^1.4.2"
wordcloud = "^1.8.1"
numpy = "^1.21.2"
multidict = "^5.1.0"
jieba = "^0.42.1"
moviepy = "^1.0.3"
pypinyin = "^0.42.0"
ImageHash = "^4.2.1"
opencv-python = "^4.5.3"
qrcode = "^7.3"
aerich = "^0.5.8"
psutil = "^5.8.0"


[tool.poetry.dev-dependencies]
nonebot-plugin-test = "^0.3.0"
flake8 = "^3.9.2"
autopep8 = "^1.5.7"
mypy = "^0.910"
black = "^21.7b0"
isort = "^5.9.3"

[nonebot.plugins]
plugins = ["nonebot_plugin_apscheduler",]
plugin_dirs = []

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 89
target-version = ['py39']