[tool.poetry]
name = "takker_reborn"
version = "2.0.0alpha.1"
description = "高い性能萝卜子Takker"
authors = ["风屿 <i@windis.cn>"]
license = "AGPL-v3"


[tool.poetry.dependencies]
python = ">=3.10, <3.11"
nonebot2 = "2.0.0beta.5"
nonebot-adapter-onebot = "2.1.3"
nonebot-plugin-apscheduler = "0.1.4"
tortoise-orm = {extras = ["accel"], version = "^0.19.2"}
aerich = "^0.6.3"
playwright = "^1.25.2"
httpx = "^0.23.0"
Pillow = "^9.2.0"
mock = "^4.0.3"

[tool.poetry.group.stubs.dependencies]
ujson = {extras = ["stubs"], version = "^5.4.0"}

[tool.poetry.group.dev.dependencies]
mypy = "^0.982"
flake8 = "^5.0.4"
black = "^22.10.0"
isort = "^5.10.1"
pytest = "^7.1.3"
types-mock = "^4.0.15.2"


[tool.poetry.group.test.dependencies]
plum-dispatch = "^1.7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 89
target-version = ['py310']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"